--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,8 +2,10 @@ html,
 body {
   padding: 0;
   margin: 0;
+  height: 100%;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  background-color: #efefef;
 }
 
 a {
@@ -13,4 +15,49 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+#__next {
+  height: 100%;
+}
+
+#container {
+  height: 100%;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+}
+
+#container > main {
+  position: relative;
+  height: calc(100vh - 128px);
+  flex: 1;
+}
+
+#container > header,
+#container > footer {
+  position: relative;
+  height: 64px;
+  padding: 20px;
+  display: flex;
+  align-items: center;
+}
+
+#container > header {
+  background-color: #000000;
+  color: #ffffff;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.25);
+}
+#container > footer {
+  background-color: #efefef;
+  margin-bottom: 0;
+}
+#container > footer::before {
+  content: ' ';
+  display: block;
+  height: 1px;
+  width: 200px;
+  background-color: rgba(0, 0, 0, 0.3);
+  position: absolute;
+  top: 0;
 }
