--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,5 @@
-@import url('http://fonts.cdnfonts.com/css/d-din');
-@import url('http://fonts.cdnfonts.com/css/inconsolata-2');
+@import url('//fonts.cdnfonts.com/css/d-din');
+@import url('//fonts.cdnfonts.com/css/inconsolata-2');
 html,
 body {
   padding: 0;
@@ -99,4 +99,8 @@ a {
     width: 100%;
     flex-direction: column;
   }
+}
+
+.right {
+  float: right;
 }
