--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,7 +7,7 @@ body {
   height: 100%;
   font-family: 'D-DIN', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
     Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  background-color: #efefef;
+  background-color: #eeeeee;
   letter-spacing: 0.5px;
   color: rgba(0, 0, 0, 0.75);
   -webkit-font-smoothing: antialiased;
@@ -27,6 +27,7 @@ a.blue {
 }
 a.logo {
   font-size: 32px;
+  font-weight: bold;
 }
 
 * {
@@ -62,10 +63,9 @@ a.logo {
 #container > header {
   background-color: #000000;
   color: #ffffff;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.25);
 }
 #container > footer {
-  background-color: #efefef;
+  background-color: #eeeeee;
   margin-bottom: 0;
   text-transform: uppercase;
   font-size: 18px;
