--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,9 +7,8 @@ body {
   height: 100%;
   font-family: 'D-DIN', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
     Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  background: transparent url(/freckles_solo.png) bottom 80px left 32px
-    no-repeat;
-  background-size: 8%;
+  background: transparent url(/kid.png) bottom 70px left 16px no-repeat;
+  background-size: 200px;
   background-color: #eeeeee;
   letter-spacing: 0.5px;
   color: rgba(0, 0, 0, 0.75);
@@ -18,23 +17,22 @@ body {
 }
 
 a {
-  color: inherit;
+  color: #0000ff;
   text-decoration: none;
 }
+a:hover {
+  color: #3333ff;
+}
 
-a.blue {
-  color: blue;
+a.border {
   letter-spacing: 1px;
-  border-bottom: 1px solid blue;
+  border-bottom: 1px solid #0000ff;
   padding-bottom: 4px;
 }
+
 a.logo {
   font-size: 32px;
   font-weight: bold;
-  color: #333;
-}
-a.logo:hover {
-  color: #000;
 }
 
 * {
@@ -69,7 +67,7 @@ a.logo:hover {
 
 #container > header {
   background-color: #fff;
-  border-bottom: 1px solid #aaa;
+  border-bottom: 1px solid #0000ff;
   color: #000;
 }
 #container > header > div {
@@ -83,13 +81,10 @@ a.logo:hover {
   border-radius: 5px;
   outline: none;
   outline: none;
-  color: #333;
   font-size: 16px;
   letter-spacing: 1px;
 }
-#container > header > div a:not(.logo):hover {
-  color: #000000;
-}
+
 #container > footer {
   background-color: #eeeeee;
   margin-bottom: 0;
@@ -103,7 +98,7 @@ a.logo:hover {
   display: block;
   height: 1px;
   width: 64px;
-  background-color: #aaa;
+  background-color: #0000ff;
   position: absolute;
   top: 0;
 }
