--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,7 +8,7 @@ body {
   font-family: 'D-DIN', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
     Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   background: transparent url(/kid.png) bottom 70px left 16px no-repeat;
-  background-size: 200px;
+  background-size: 00px;
   background-color: #eeeeee;
   letter-spacing: 0.5px;
   color: rgba(0, 0, 0, 0.75);
@@ -72,8 +72,13 @@ a.logo {
 }
 #container > header > div {
   flex: 1;
-  width: 100%;
   display: block;
+}
+#container > header > div:last-child {
+  display: flex;
+  flex: 2;
+  align-items: center;
+  justify-content: right;
 }
 #container > header > div a:not(.logo) {
   cursor: pointer;
@@ -81,7 +86,7 @@ a.logo {
   border-radius: 5px;
   outline: none;
   outline: none;
-  font-size: 16px;
+  font-size: 14px;
   letter-spacing: 1px;
 }
 
@@ -141,5 +146,5 @@ a.logo {
 .mute {
   opacity: 0.3;
   font-weight: normal;
-  margin: 0 0.5em;
+  margin: 0 0.2em;
 }
