update footer as well

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -91,7 +91,7 @@ a.logo {
 }
 
 #container > footer {
-  background-color: #e9eeff;
+  background-color: #d3d9ed;
   margin-bottom: 0;
   text-transform: uppercase;
   font-size: 18px;
