--- a/styles/globals.css
+++ b/styles/globals.css
@@ -55,6 +55,10 @@ a.logo {
   height: calc(100vh - 144px);
   flex: 1;
   margin: 72px 0;
+  overflow: auto;
+}
+#container > main > div {
+  overflow: auto;
 }
 
 #container > header,
@@ -112,6 +116,7 @@ a.logo {
   letter-spacing: 1px;
   font-family: 'JetBrains Mono', Consolas, 'Courier New', monospace;
 }
+
 #container > footer > p {
   text-align: center;
   margin: 0 auto;
@@ -126,7 +131,7 @@ a.logo {
 .code {
   padding: 0.75rem;
   font-size: 16px;
-  opacity: 0.95;
+  opacity: 1.95;
   font-family: 'JetBrains Mono', Menlo, Monaco, Lucida Console, Liberation Mono,
     DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace;
 }
